# sw-defmodel

./: .gitignore  Cargo.toml  README.md
src/: component_definition.rs  definition.rs  definition_view.rs  domtree.rs  generic_view.rs  helpers.rs  lib.rs  macros.rs  vehicle_view.rs
src/component_definition/: definition.rs  surfaces.rs
src/domtree/: attributes.rs  element.rs  error.rs  errors.rs  has_children.rs  node.rs  utils.rs
