[package]
name = "sw-defmodel"
version = "0.1.0"
edition = "2024"
description = "A Rust library for reading and manipulating Stormworks data files with typed XML support."
license = "MIT"

[features]
tool = ["heck"]

[dependencies]
heck = { version = "0.5.0", optional = true }
paste = "1.0.15"
quick-xml = "0.39.2"

[[bin]]
name = "xml_analyzer"
path = "src/bin/xml_analyzer/main.rs"
required-features = ["tool"]
