[package]
name = "sw-defmodel"
version = "0.1.0"
edition = "2024"
description = "A Rust library for reading and manipulating Stormworks data files with typed XML support."
license = "MIT"

[features]
tool = ["heck", "rayon", "serde", "ron"]

[dependencies]
quick-xml = "0.39.2"
paste = "1.0.15"
heck = { version = "0.5.0", optional = true }
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
ron = { version = "0.12.0", optional = true }

[[bin]]
name = "xml_analyzer"
path = "src/bin/xml_analyzer/main.rs"
required-features = ["tool"]
